<resources>
    <string name="app_name">Teamkarma</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="comments">Comments</string>
    <string name="save_task">Save Task</string>
    <string name="due_date">Due Date</string>
    <string name="assignee_prompt">Enter Assignee Name</string>
    <string name="task_prompt">Enter Task Description</string>

    <string name="title_activity_comments">CommentsActivity</string>
    <string name="send">Send</string>
    <string name="send_btn">Send Message</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="no_task_details">Task details not fetched yet.</string>
    <string name="swipe_right_to_save">You can also swipe right to save this task</string>
    <string name="due_date_validation">Due date cannot be earlier than today.</string>
    <string name="error_field_required">Fields cannot be empty. Please enter some values.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_number">This phone number is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">No name specified</string>
    <string name="prompt_phone">Phone number</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started.</string>
    <string name="title_activity_addtask">Tasks</string>
    <string name="empty_task_comment_error">No task to comment on.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_for_you">No tasks assigned to you yet. Swipe left to create a new task</string>
    <string name="dismiss">Dismiss</string>
    <string name="action_edit_profile">Edit your profile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="profile_picture">This space shows your profile picture.</string>
    <string name="action_profile_pic">Tap this button to choose an image from gallery or take a new photo.</string>
    <string name="add_photo_dialog_title">Add Photo</string>
    <string name="loading_task_details">Loading task details…</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="msg_manual_otp">(Enter the OTP below in case the SMS is not detected automatically.)</string>
    <string name="msg_wait_for_otp">Please wait while your mobile number is being verified.</string>
    <string name="action_edit_mobile">Enter mobile number</string>
    <string name="invalid_user">Assignee could not be found on the list of registered users. Please check your Internet connection if your contact is registered.</string>
    <string name="task_saved">Task saved.</string>
    <string name="image_capture_error">Error: Image not captured!</string>
    <string name="invalid_mobile">Please enter a valid mobile number.</string>
    <string name="invalid_otp">Please enter the OTP</string>
</resources>
