<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ishita.assigntasks.AddTask$PlaceholderFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/task_prompt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/assignee_prompt"
        android:ems="10"
        android:id="@+id/assignee"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/due_date"
        android:focusable="false"
        android:layout_below="@id/assignee"
        android:layout_alignRight="@id/assignee"
        android:layout_alignEnd="@id/assignee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:id="@+id/date"
        android:textSize="18sp"
        android:layout_alignBottom="@id/due_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comments"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/comments"/>

    <Button
        android:id="@+id/save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_task"
        android:layout_marginBottom="50dp" />


</RelativeLayout>
