<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.ishita.assigntasks.LoginActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/msg_enter_mobile"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <!--<EditText
            android:id="@+id/inputName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:hint="@string/prompt_name"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />-->

        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_request_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/action_sign_in_short"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>